--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "formsify",
+  "name": "formity",
   "author": "Marti Serra",
-  "module": "dist/formsify.esm.js",
+  "module": "dist/formity.esm.js",
   "size-limit": [
     {
-      "path": "dist/formsify.cjs.production.min.js",
+      "path": "dist/formity.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/formsify.esm.js",
+      "path": "dist/formity.esm.js",
       "limit": "10 KB"
     }
   ],
