--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -34,6 +34,7 @@
     "trailingComma": "es5"
   },
   "name": "formity",
+  "description": "Create dynamic react forms with just a json",
   "author": "Marti Serra",
   "module": "dist/formity.esm.js",
   "size-limit": [
@@ -46,6 +47,19 @@
       "limit": "10 KB"
     }
   ],
+  "keywords": [
+    "javascript",
+    "react",
+    "form",
+    "forms",
+    "mongu",
+    "validation"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/martiserra99/formity"
+  },
+  "homepage": "https://github.com/martiserra99/formity",
   "devDependencies": {
     "@size-limit/preset-small-lib": "^11.0.0",
     "@types/react": "^18.2.39",
