--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.1",
+  "version": "1.3.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -59,7 +59,7 @@
     "type": "git",
     "url": "https://github.com/martiserra99/formity"
   },
-  "homepage": "https://github.com/martiserra99/formity",
+  "homepage": "https://formity-docs.vercel.app",
   "devDependencies": {
     "@size-limit/preset-small-lib": "^11.0.0",
     "@types/react": "^18.2.39",
