--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.2",
+  "version": "2.0.3",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -34,7 +34,7 @@
     "trailingComma": "es5"
   },
   "name": "formity",
-  "description": "Build dynamic React forms, without the hassle.",
+  "description": "Build dynamic React forms, easily with JSON syntax.",
   "author": "Marti Serra",
   "module": "dist/formity.esm.js",
   "size-limit": [
