--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.2.0",
+  "version": "2.3.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -20,7 +20,9 @@
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "mongu": "^2.0.0",
+    "react-hook-form": "^7.0.0"
   },
   "husky": {
     "hooks": {
@@ -72,8 +74,5 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
   },
-  "dependencies": {
-    "mongu": "^2.5.2",
-    "react-hook-form": "^7.48.2"
-  }
+  "dependencies": {}
 }
