--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.0.0",
+  "version": "3.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -21,7 +21,6 @@
   },
   "peerDependencies": {
     "react": ">=16",
-    "mongu": "^2.0.0",
     "react-hook-form": "^7.0.0"
   },
   "husky": {
@@ -74,5 +73,7 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "mongu": "^3.0.2"
+  }
 }
